Driver class for DataWarehouse is now configurable via properties file.

--- a/META-INF/datawarehouse.properties.tml
+++ b/META-INF/datawarehouse.properties.tml
@@ -1,3 +1,4 @@
+driverClass: com.microsoft.sqlserver.jdbc.SQLServerDriver
 connectionURL: jdbc:sqlserver://localhost\\instance:1433;databaseName=database;selectMethod=cursor
 username: user
 password: ******
